<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".civil"
    tools:ignore="ContentDescription"
    android:background="@drawable/backgroundcivil">
    <include
        android:id="@+id/toolbar9"
        layout="@layout/toolbar9" />

    <Button
        android:id="@+id/button33"
        android:layout_width="239dp"
        android:layout_height="66dp"
        android:layout_below="@id/toolbar9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/bevan"
        android:text="@string/tt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button35"
        android:layout_width="239dp"
        android:layout_height="66dp"
        android:layout_below="@id/button33"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/bevan"
        android:text="@string/SY"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button37"
        android:layout_width="239dp"
        android:layout_height="66dp"
        android:layout_below="@id/button35"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/bevan"
        android:text="@string/grades"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button40"
        android:layout_width="239dp"
        android:layout_height="66dp"
        android:layout_below="@id/button37"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/bevan"
        android:text="@string/classroom"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />




</RelativeLayout>