<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CIVIL_grade"
    tools:ignore="ContentDescription">
<include
    android:id="@+id/toolbar9"
    layout="@layout/toolbar9"/>

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar9"
        android:hint="@string/hint"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/button41"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit"
        android:background="#00bcd4"
        android:text="@string/upload"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>



    </LinearLayout>
    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:gravity="center_horizontal"
        android:layout_below="@id/button41"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <ListView
        android:id="@+id/listView"
        style="@android:style/Widget.DeviceDefault.Light.ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewStatus"
        android:layout_marginTop="1dp"
        android:fastScrollAlwaysVisible="true"
        android:fastScrollEnabled="true" />


</RelativeLayout>